--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.12.0",
     "react-responsive-carousel": "^3.2.23",
     "react-slick": "^0.29.0",
+    "react-spring": "^9.7.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
