--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "lightgallery": "^2.7.2",
     "next": "14.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
