--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.2.2",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "lightgallery": "^2.7.2",
