--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.2.2",
+    "@vercel/speed-insights": "^1.0.10",
     "aos": "^2.3.4",
     "bootstrap": "^5.3.2",
     "lightgallery": "^2.7.2",
